[workspace]
members = [
    "cypher-*"
]

# Required for Bevy to correctly load in workspaces
resolver = "2"

default-members = [ "cypher-game" ]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
bevy = { version = "0.10", default-features = false }
bevy_renet = { version = "0" }
bincode = { version = "1.3" }
thiserror = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }