[package]
name = "cypher-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

serde_json = "1.0"

strum = "0.24"
strum_macros = "0.24"

[dev-dependencies]
criterion = "0.3"

[dependencies.bevy]
workspace = true

[dependencies.serde]
workspace = true