[package]
name = "cypher-data-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cypher-core = { path = "../cypher-core" }
cypher-item = { path = "../cypher-item" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

egui = "0.18.0"
eframe = { version = "0.18.0", features = ["persistence"] }

project-root = "0.2"