[package]
name = "cypher-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cypher-core = { path = "../cypher-core"}
cypher-character = { path = "../cypher-character"}
cypher-item = { path = "../cypher-item"}
cypher-world = { path = "../cypher-world" }
cypher-net = { path = "../cypher-net" }

rand = "0.8.5"

[dependencies.bevy]
workspace = true
features = ["default"]

