[package]
name = "cypher-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cypher-core = { path = "../cypher-core" }
cypher-character = { path = "../cypher-character" }
cypher-item = { path = "../cypher-item"}
cypher-world = { path = "../cypher-world" }
cypher-net = { path = "../cypher-net" }
cypher-data = { path = "../cypher-data" }
cypher-ux = { path = "../cypher-ux", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.bevy]
workspace = true

[dependencies.bevy_renet]
workspace = true

[dependencies.bevy-inspector-egui]
workspace = true

[features]
default = ["game_client"]
game_client = [
    "bevy/default",
    "cypher-world/game_client",
    "dep:cypher-ux"
]
game_server = []
