[package]
name = "cypher-item"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cypher-core = { path = "../cypher-core" }

uuid = { version = "1.2", features = ["v4"] }
rand = "0.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"