[package]
name = "cypher-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24", features = ["net", "rt"] }
strum = "0.24"
strum_macros = "0.24"
serde = "1.0"
postcard = "1.0"

[dependencies.bevy]
workspace = true
features = ["default", "serialize"]