[package]
name = "cypher-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cypher-core = { path = "../cypher-core" }
cypher-item = { path = "../cypher-item" }
cypher-data = { path = "../cypher-data" }

tokio = { version = "1.23", features = ["net", "rt"] }
strum = "0.24"
strum_macros = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = "1.0"

[dependencies.bevy_renet]
workspace = true

[dependencies.bevy]
workspace = true
features = ["serialize"]

[dependencies.bincode]
workspace = true

[dependencies.rand]
workspace = true