[package]
name = "cypher-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cypher-character = { path = "../cypher-character"}
cypher-net = { path = "../cypher-net" }
cypher-core = { path = "../cypher-core" }
cypher-item = { path = "../cypher-item" }

bevy_renet = "0"

[dependencies.bevy]
workspace = true