[package]
name = "cypher-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cypher-character = { path = "../cypher-character"}
cypher-net = { path = "../cypher-net" }
cypher-core = { path = "../cypher-core" }
cypher-item = { path = "../cypher-item" }
cypher-data = { path = "../cypher-data" }

bevy_renet = "0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rand = "0.8"

[dependencies.bevy]
workspace = true
